day03/bgg/deploy-bgg-app-v2.yaml
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: bgg-app-deployment-v2
  namespace: workshop02

spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: bgg-app-pod

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  template:
    metadata:
      name: bgg-app-pod
      labels:
        app.kubernetes.io/name: bgg-app-pod
        app.kubernetes.op/version: "v2"
#        app.kubernetes.op/version: "v1"
#        owner: engineering
    spec:
      containers:
      - name: bgg-app-container
#        image: stackupiss/bgg-app:v1
        image: stackupiss/bgg-app:v2
        imagePullPolicy: Always
        ports:
        - name: bgg-app-port
          containerPort: 3000

---
apiVersion: v1

kind: Service

metadata:
  name: bgg-app-svc-v2
  namespace: workshop02
  labels:
    name: bgg-app-svc

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bgg-app-pod
    app.kubernetes.op/version: "v2"
  ports:
  - name: mysql-port-svc
    port: 8080
    targetPort: bgg-app-port
