day03/bgg/deploy-bgg-app.yaml
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: bgg-app-deployment-v1
  namespace: workshop02

spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: bgg-app-pod

  template:
    metadata:
      name: bgg-app-pod
      labels:
        app.kubernetes.io/name: bgg-app-pod
#        app.kubernetes.op/version: "v2"
        app.kubernetes.op/version: "v1"
        owner: engineering
    spec:
      containers:
      - name: bgg-app-pod
        image: stackupiss/bgg-app:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu:  100m
        ports:
        - name: bgg-app-port
          containerPort: 3000

---
apiVersion: v1

kind: Service

metadata:
  name: bgg-app-svc-v1
  namespace: workshop02
  labels:
    name: bgg-app-svc-v1

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bgg-app-pod
    app.kubernetes.op/version: "v1"
  ports:
  - name: mysql-port-svc
    port: 80
    targetPort: bgg-app-port
